@@ -36,7 +36,6 @@ Wishlist
 - Timestamp on each row in the activity log window.
 - Run Vienna from the status bar.
 - Applescript: extend article object to allow writing as well as reading properties.
-- Save open tabs when Vienna exits and restore when it restarts.
 - More options in date field in smart folders: last 24 hour, last 24-48 hours.
 - Support for AmphetaRate (http://amphetarate.newsfairy.com/index.php).
 - Detect duplicate articles in separate folders and show only once.
