@@ -309,3 +309,4 @@
 "Unread Articles" = "Unread Articles";
 "Last Refresh" = "Last Refresh";
 "Feed URL updated to %@" = "Feed URL updated to %@";
+"Filter articles" = "Filter articles";
